# fanWatch

./: CMakeLists.txt  README.md  install.sh  main.cpp
